@@ -1,4 +1,8 @@
-2012-10-03 Molnar Karoly <molnarkaroly@users.sf.net>
+2012-10-06 Molnar Karoly <molnarkaroly@users.sf.net>
+        * tools/device-help.pl: New feature in the "Configuration Bits" tabs.
+          The "CONFIGx" label thereafter shows the mask also.
+
+2012-10-06 Molnar Karoly <molnarkaroly@users.sf.net>
         * tools/device-help.pl: Correction of a minor bug in
           the read_all_informations() function. If one of
           in field had a '<' or '>' characters, incorrectly
